# BlockGame

./: LICENSE.txt.txt  NOTES.txt  README.md
not src/oldsrc/MS4b/Graphics/: CMakeLists.txt  Camera.h  actor.cpp  framebuffer.h  graphics.h  openglincludes.h  window.cpp  window.h
oldsrc/MS4b/Panel/: CMakeLists.txt
oldsrc/MS4b/Panel/base/: panel.cpp
src/: CMakeLists.txt  CMakeLists.txt~  CMakeLists_MAIN_OLD.txt  CMakeLists_STANDALONES.txt
src/ExtOgre/TestOgre/: HollowShell.sln
src/ExtOgre/TestOgre/HollowShell/: HollowShell.vcxproj  HollowShell.vcxproj.filters  basesystem.cpp  basesystem.h  cameracontroller.cpp  cameracontroller.h  f3dmultigraphicsgamestate.cpp  f3dmultigraphicsgamestate.h  f3dmultigraphicssystem.cpp  f3dmultigraphicssystem.h  f3dmultilogicgamestate.cpp  f3dmultilogicgamestate.h  forward3dgamestate.cpp  forward3dgamestate.h  gameentitymanager.cpp  gameentitymanager.h  gamestate.cpp  gamestate.h  graphicssystem.cpp  graphicssystem.h  igamestate.h  iinputlisteners.h  logicsystem.cpp  logicsystem.h  main.cpp  main_OLD.cpp  plugins_d.cfg  sdlemulationlayer.h  sdlinputhandler.cpp  sdlinputhandler.h  terraingamestate.cpp  terraingamestate.h
src/ExtTutorials/: mysoo.vssettings
src/ExtTutorials/EchoServer/EchoServer/: EchoServer.sln  EchoServer.vcxproj  EchoServer.vcxproj.filters  ServerMain.cpp  SocketServer.cpp  UpgradeLog.htm  UpgradeLog2.htm
src/ExtTutorials/MyServer/: HollowShell.sln
src/ExtTutorials/MyServer/Debug/: HollowShell.ilk
src/ExtTutorials/MyServer/HollowShell/: HollowShell.vcxproj  HollowShell.vcxproj.filters  definitions_types.h  main.cpp
src/ExtTutorials/Positroner/Positroner/: Positroner.sln
src/Main/: CMakeLists.txt  CMakeLists.txt~
src/Main/Framework/: CMakeLists.txt  framework.cpp
src/Main/Framework/actor/: actor.cpp  iactor.h
src/Main/Framework/client/: iclient.h
src/Main/Framework/memory/: imemory.h
src/Main/Framework/panel/: panel.cpp  panel.h
src/Main/Framework/referencer/: referencer.h
src/Main/Framework/scene/: scene.cpp  scene.h
src/Main/Framework/server/: iserver.h  iservershard.h
src/Main/Framework/stage/: stage.cpp  stage.h
src/Main/Framework/state/: state.h  statemachine.h  statetransitioner.h
src/Main/Framework/transition/: transition.h
src/Main/Game/: CMakeLists.txt  CMakeLists.txt~  brain.h  characterchosenstate.cpp  characterchosenstate.h  charactercreationstate.cpp  charactercreationstate.h  characterselectstate.cpp  characterselectstate.h  collider.cpp  collider.h  debugpane.cpp  debugpane.h  fpscounter.cpp  fpscounter.h  game.h  gamestate.h  gamestatemachine.h  main.cpp  state.h  statemachine.h  testgame.cpp  testgame.h  testpane.cpp  testpane.h
src/Main/Game/NOTA/: fpscounter.cpp  fpscounter.h  presentable.h
src/Main/Game/NOTA_april2017/: characterchosenstate.cpp  charactercreationstate.h  game.cpp  main_old.cpp  state.h  statemachine.h  statetransitionable.h  test1state.cpp  test1state.h
src/Main/Game/characterchosenstates/: directorstate.cpp  directorstate.h  flyloadstate.cpp  flyloadstate.h  menu.cpp  menu.h  menustate.cpp  menustate.h  playstate.cpp  playstate.h
src/Main/Game/charactercreationstates/: choosedisciplinestate.cpp  choosedisciplinestate.h  chooselooksstate.cpp  chooselooksstate.h
src/Main/Game/client/: client.cpp  client.h
src/Main/Game/memory/: instancememory.cpp  instancememory.h  multiplayermemory.cpp  multiplayermemory.h  progressionmemory.cpp  progressionmemory.h  settingsmemory.cpp  settingsmemory.h
src/Main/Game/overstate/: overstate.cpp  overstate.h
src/Main/Game/server/: server.cpp  server.h  servershard.cpp  servershard.h
src/Main/Game/stages/: mainmachine.cpp  mainmachine.h
src/Main/Game/state/: istatetransitioner.h  state.h  statemachine.h  statetransitioner.h
src/Main/Game/transition/: itransitioner.h
src/Main/Graphics/: =  CMakeLists.txt  camera.h  font.cpp  font.h  fonthelpers.h  graphics.cpp  graphics.h  idimensionable.h  mesh.h  openglincludes.h  panel.cpp  panel.h  renderer.cpp  renderer.h  reslib.cpp  reslib.h  resource.h  shader.cpp  shader.h  shaderprogram.cpp  shaderprogram.h  window.cpp  window.h
src/Main/Graphics/NOTA_april2017/: animator.cpp  animator.h  camera.cpp  camera.h  font.h  fonthelpers.h  panel.cpp  panel.h  renderer.cpp  reslib.cpp  reslib.h  shaderprogram.h  texture.cpp  texture.h
src/Main/Graphics/backloader/: backloader.cpp  backloader.h
src/Main/Graphics/builders/: buildmeshresources.cpp  buildshaderresources.cpp  buildtextureresources.cpp
src/Main/Graphics/buildres/: buildfontres.cpp  buildmeshres.cpp  buildshaderprogramres.cpp  buildshaderres.cpp  buildtextureres.cpp
src/Main/Launchpad/: CMakeLists.txt  main.cpp
src/Main/Utilities/: CMakeLists.txt  CMakeLists.txt~  CMakeLists_OLD.txt  chunkmanager.cpp  chunkmanager.cpp~  chunkmanager.h  chunkptr.cpp  chunkptr.h  definitions_types.h  definitions_values.h  frame.cpp  frame.h  glfwerrorfunc.cpp  glfwerrorfunc.h  gserrorfunc.cpp  gserrorfunc.h  gsfilesystem.cpp  gsfilesystem.h  gshandler.cpp  gshandler.h  gsinvestor.h  gsobject.h  gsthread.cpp  gsthread.h  gsvariant.h  gsvector.cpp  gsvector.h  input.cpp  input.h  misc.cpp  net.h  typedefinitions.cpp  typedefinitions.h  utilities.cpp  utilities.h  utilities.h~
src/Main_sv051117/: CMakeLists.txt
src/Main_sv051117/Game/: CMakeLists.txt
src/Main_sv051117/Graphics/: CMakeLists.txt
src/Main_sv051117/Launchpad/: CMakeLists.txt  main.cpp
src/Main_sv051117/Utilities/: CMakeLists.txt  debugprinter.h  definitions_types.h  definitions_values.h  gserrorfunc.cpp  gserrorfunc.h  utilities.cpp
src/Standalones/: CMakeLists.txt
src/Standalones/GLFW_Test/: CMakeLists.txt  main.cpp
src/Test/: CMakeLists.txt
src/Test/GraphicsTester/: CMakeLists.txt  graphicstest.cpp  graphicstest.h  windowtest.h
src/Test/UtilitiesTest/: CMakeLists.txt  chunkmanagertest.cpp  utilitiestest.cpp
src/Test/UtilitiesTester/: CMakeLists.txt  chunkmanagertest.cpp  chunkmanagertest.h  chunkptrtest.h  frametest.h  frametest.h~  gshandlertest.h  gsthreadtest.h  gsvectortest.h  utilitiestest.cpp  utilitiestest.h
(+602 files in other folders)
